# litestar-auth

./: .env.example  .gitignore  README.md  app.py  pre-commit.yaml  pyproject.toml
src/config/: app.py  base.py  constants.py
src/db/migrations/: 002_create_users.sql  003_create_sessions.sql  004_add_refresh_token.sql
src/domain/users/: controllers.py  deps.py  schemas.py  services.py
src/domain/users/repositories/: session.py  user.py
src/lib/: deps.py  exceptions.py
src/server/: auth.py  core.py  lifespan.py  plugins.py
