[project]
name = "litestar-auth-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuri Fontella", email = "yurifc4@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "litestar[standard] (>=2.19.0,<3.0.0)",
    "litestar-asyncpg (>=0.5.0,<0.6.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-dotenv (>=1.2.1)",
    "dnspython (>=2.8.0,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "poetry-core (>=2.2.1)",
]

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
ruff = "^0.14.9"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
